VDPAU fails to rotate video
Since the transform filter does not work for hardware surfaces, VDPAU needs to manually rotate the video before rendering.
Since the transform filter does not work for hardware surfaces, VDPAU needs to manually rotate the video before rendering.
changed milestone to %2.2.0
assigned to @Courmisch and unassigned @MigrationBot
changed title from VDPAU fails on rotated video to VDPAU fails to rotate video
added Status::fixed label
closed
commit 1788f97f Author: Rémi Denis-Courmont remi@remlab.net Date: Sat Jun 7 19:10:24 2014 +0300
vdpau/chroma: reorient the video (fixes [#11068](https://code.videolan.org/videolan/vlc/-/issues/11068))
Original author: remi@remlab.net
VideoLAN code repository instance