vdpau/chroma: reorient the video (fixes #11068)